# cparamlib

./: AAS  AUTHORS  ChangeLog  Makefile  Makefile.am  README  TAGS  aclocal.m4  antinue.c  antinumu.c  autogen.sh  configure.ac  cparamlib.pc.in  cparammodel.h  cparammodel.i  elec.c  flux.c  nue.c  numu.c  params.c  posi.c  sigma.c  test.c
cparamlib/: Makefile.am  antinue.c  antinumu.c  cparamlib.h  cparammodel.h  elec.c  gamma.c  nue.c  numu.c  posi.c  sigma.c
doc/: Doxyfile.in  Makefile.am  footer.html  header.html  install.dox  mainpage.dox  tutorial.dox
examples/: Makefile  example1.c  example2.c  examples.c  parameters.c  params.c  spectrum.c  test.c
m4/: ac_python_devel.m4
python/: Makefile.am  ParamModel.py  __init__.py  cparamlib.i  cparammodel.i  pycparam.i
src/: params.c  test.c
